--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,2 +1,4 @@
 file.path = C:/firebase/greenshop-5cda2-firebase-adminsdk-euytg-849e5256ea.json
 firebase.name = https://greenshop-5cda2-default-rtdb.europe-west1.firebasedatabase.app/
+web.api.key = AIzaSyAmXJZAgjnjErvjPa9LFpJDzicbSfbY8s4
+signInUrl=https://identitytoolkit.googleapis.com/v1/accounts:signInWithPassword?key=
